Moved back to kinotic package name